@@ -36,6 +36,7 @@ SUBPROJECTS = \
 # MAIN APP
 #
 APP_NAME = Gorm
+Gorm_PRINCIPAL_CLASS=Gorm
 Gorm_MAIN_MODEL_FILE=Gorm.gorm
 Gorm_APPLICATION_ICON=Gorm.tiff
 Gorm_RESOURCE_FILES = \
