@@ -1,3 +1,9 @@
+Fri Jan  7 11:03:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* GNUmakefile: Set Gorm_PRINCIPAL_CLASS
+	* Gorm.m: Do startup stuff in [-finishLaunching] and use the
+	NSApplicationMain() function to run the app (as well-behaved apps do).
+
 Wed Jan  5 17:00:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Palettes/0Menu/main.m: First cut at code for providing menus items
